--- a/CMPS-202-project/CMPS-202-project.csproj
+++ b/CMPS-202-project/CMPS-202-project.csproj
@@ -74,6 +74,7 @@
     <Compile Include="EditInfoForm.Designer.cs">
       <DependentUpon>EditInfoForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUIHelper.cs" />
     <Compile Include="ListForm.cs">
       <SubType>Form</SubType>
     </Compile>
