--- a/CMPS-202-project/CMPS-202-project.csproj
+++ b/CMPS-202-project/CMPS-202-project.csproj
@@ -80,11 +80,11 @@
     <Compile Include="EditInfoForm.Designer.cs">
       <DependentUpon>EditInfoForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="subscription plan.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="subscription plan.Designer.cs">
+      <DependentUpon>subscription plan.cs</DependentUpon>
     </Compile>
     <Compile Include="GUIHelper.cs" />
     <Compile Include="WatchForm.cs">
@@ -152,8 +152,8 @@
     <EmbeddedResource Include="EditInfoForm.resx">
       <DependentUpon>EditInfoForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="subscription plan.resx">
+      <DependentUpon>subscription plan.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="WatchForm.resx">
       <DependentUpon>WatchForm.cs</DependentUpon>
