--- a/CMPS-202-project/CMPS-202-project.csproj
+++ b/CMPS-202-project/CMPS-202-project.csproj
@@ -86,11 +86,11 @@
     <Compile Include="subscription plan.Designer.cs">
       <DependentUpon>subscription plan.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form2.cs">
+    <Compile Include="publisher_actor.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form2.Designer.cs">
-      <DependentUpon>Form2.cs</DependentUpon>
+    <Compile Include="publisher_actor.Designer.cs">
+      <DependentUpon>publisher_actor.cs</DependentUpon>
     </Compile>
     <Compile Include="GUIHelper.cs" />
     <Compile Include="WatchForm.cs">
@@ -161,8 +161,8 @@
     <EmbeddedResource Include="subscription plan.resx">
       <DependentUpon>subscription plan.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form2.resx">
-      <DependentUpon>Form2.cs</DependentUpon>
+    <EmbeddedResource Include="publisher_actor.resx">
+      <DependentUpon>publisher_actor.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="WatchForm.resx">
       <DependentUpon>WatchForm.cs</DependentUpon>
